<resources>
    <string name="app_name">MarkdownJ</string>
    <string name="last_modify">Modify:&#160;&#160; </string>
    <string name="rename">Rename</string>
    <string name="share_doc">Share note</string>
    <string name="del_doc">Delete note</string>
    <string name="input_title">Input Title</string>
    <string name="hint_title">Try a good name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="clean">Clean</string>
    <string name="clean_success">Clean successfully</string>
    <string name="about">A note which focuses on writing in Markdown, it is easy to use and you can enjoy writing here.</string>
    <string name="theme">Theme Style</string>
    <string name="white">White</string>
    <string name="dark">Dark</string>
    <string name="check_update">Check Updates</string>
    <string name="help">Syntax help</string>
    <string name="quick_input">Quick input</string>
    <string name="highlight">Syntax highlight</string>
    <string name="real_time_preview">Real-time preview</string>
    <string name="export_dir">Exporting directory</string>
    <string name="donate">Donate</string>
    <string name="share_app">Share app</string>
    <string name="bug_feedback">Bugs report</string>
    <string name="email">Contact</string>
    <string name="hint_keywords">Input keywords</string>
    <string name="let_us_go">Start writing</string>
    <string name="share_file">Share File</string>
    <string name="alipay_error">Alipay not found</string>
    <string name="email_not_found">Email client not found</string>
    <string name="email_title">About MarkdownJ</string>
    <string name="pdf_convert_failed">Convert to PDF failed</string>
    <string name="content_empty">Content is empty</string>
    <string name="write_permission">Write file permission not granted</string>
    <string name="convert_image_failed">Convert to image failed</string>
    <string name="convert_html_failed">Convert to HTML failed</string>
    <string name="app_setting">Setting</string>
    <string name="export_success">Export successfully</string>
    <string name="dir_not_found">Directory not exists</string>
    <string name="import_success">Import successfully</string>
    <string name="read_permission">Read file permission not granted</string>
    <string name="rename_success">Rename successfully</string>
    <string name="update_failed">Insert or update failed: </string>
    <string name="del_failed">Delete failed: </string>
    <string name="get_failed">Retrieve failed:</string>
    <string name="menu_new_dir">New directory</string>
    <string name="menu_new_file">New note</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="sync_cloud">Synchronize</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="help_raw">Original</string>
    <string name="help_preview">Preview</string>
    <string name="help_split">Split</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="edit">Edit</string>
    <string name="save_now">Save</string>
    <string name="edit_title">Rename</string>
    <string name="share_md">Share MD file</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share_html">Share HTML</string>
    <string name="share_image">Share image</string>
    <string name="msg_export">Export to %s, will override files with the same name</string>
    <string name="msg_import">Import files in %s, make sure your files are located there, do not import multiple times</string>
    <string name="msg_del">Sure to delete [%s]?(Cannot bo recovered)</string>
</resources>